fix(playground): vertical align icon

--- a/playground/src/app/tab-nav/tab-nav.component.scss
+++ b/playground/src/app/tab-nav/tab-nav.component.scss
@@ -46,6 +46,7 @@ form {
     color: #bfbfbf;
     border: 0 none;
     cursor: pointer;
+    line-height: 10px;
 
     .loader {
       animation: spin 2s linear infinite;
